# daily-readme-update

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  readme-check.yml  verify.yml
agents/: openai.yaml
homebrew/: readme-guardian.rb
npm/: README.md  cli.js  package.json  readme_guardian-1.1.0-py3-none-any.whl  readme_guardian-1.1.1-py3-none-any.whl  readme_guardian-1.1.2-py3-none-any.whl
readme_sync/: __init__.py  __main__.py
tests/: test_readme_guardian.py
vscode-ext/: extension.js  package.json
