[project]
name = "readme-guardian"
version = "1.0.0"
description = "The README freshness guarantee for vibe coders. Auto-syncs README.md with live data before every push."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["readme", "documentation", "git-hooks", "developer-tools", "vibe-coding", "ai-agents", "claude-code", "codex"]

authors = [
    {name = "Jeevesh Singale"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: AI/ML Enthusiasts",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/jeevesh2515/readme-guardian"
Repository = "https://github.com/jeevesh2515/readme-guardian"

[project.scripts]
readme-guardian = "readme_sync:main"
readme-sync = "readme_sync:main"

[tool.setuptools.packages.find]
include = ["readme_sync*"]
