[project]
name = "readme-guardian"
version = "1.1.0"
description = "Safely keep managed README facts current for fast-moving AI-assisted projects."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["readme", "documentation", "git-hooks", "developer-tools", "vibe-coding", "ai-agents", "claude-code", "codex"]

authors = [
    {name = "Jeevesh Singale"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/jeevesh2515/readme-guardian"
Repository = "https://github.com/jeevesh2515/readme-guardian"
"Bug Tracker" = "https://github.com/jeevesh2515/readme-guardian/issues"
"Security" = "https://github.com/jeevesh2515/readme-guardian/security/policy"

[project.scripts]
readme-guardian = "readme_sync:main"
readme-sync = "readme_sync:main"

[tool.setuptools.packages.find]
include = ["readme_sync*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
